@@ -2,5 +2,5 @@ pkglib_LTLIBRARIES = libHwStandardModel.la
 libHwStandardModel_la_SOURCES = RunningMassBase.cc  RunningMassBase.icc  \
 	RunningMass.h    StandardCKM.cc  StandardCKM.icc   StandardModel.h \
 	RunningMassBase.h   RunningMass.cc       RunningMass.icc  \
-	StandardCKM.h   StandardModel.cc  StandardModel.icc
-
+	StandardCKM.h   StandardModel.cc  StandardModel.icc \
+        O2AlphaS.h O2AlphaS.fh O2AlphaS.icc O2AlphaS.cc
