@@ -1,0 +1,41 @@
+// -*- C++ -*-
+//
+// This is the implementation of the inlined member functions of
+// the O2AlphaS class.
+//
+
+namespace Herwig {
+
+  inline O2AlphaS::O2AlphaS() : _lambdaQCD(180.*MeV),_copt(0)
+{
+  for(unsigned int ix=0;ix<6;++ix)
+    {
+      _bcoeff[ix]=0.;
+      _ccoeff[ix]=0.;
+      _lambdas[ix]=0.;  
+      _threshold[ix]=0.;
+      _match[ix]=0.;
+    }
+}
+
+inline O2AlphaS::O2AlphaS(const O2AlphaS & x)
+  : AlphaSBase(x),_lambdaQCD(x._lambdaQCD),_copt(x._copt) 
+{
+  for(unsigned int ix=0;ix<6;++ix)
+    {
+      _bcoeff[ix]    = x._bcoeff[ix];
+      _ccoeff[ix]    = x._ccoeff[ix];
+      _lambdas[ix]   = x._lambdas[ix]  ;  
+      _threshold[ix] = x._threshold[ix];
+      _match[ix]     = x._match[ix];
+    }
+}
+
+inline IBPtr O2AlphaS::clone() const {
+  return new_ptr(*this);
+}
+
+inline IBPtr O2AlphaS::fullclone() const {
+  return new_ptr(*this);
+}
+}
